force-app/main/default/objects/Trecho__c/fields/FimPesagem__c.field-meta.xml
<CustomField>
    <fullName>FimPesagem__c</fullName>
    <label>Última Pesagem</label>
    <summarizedField>Passageiro__c.HoraCheckin__c</summarizedField>
    <summaryForeignKey>Passageiro__c.Trecho__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>