force-app/main/default/objects/Trecho__c/fields/HasPMH__c.field-meta.xml
<CustomField>
    <fullName>HasPMH__c</fullName>
    <defaultValue>true</defaultValue>
    <label>HasPMH</label>
    <type>Checkbox</type>
</CustomField>