force-app/main/default/objects/Trecho__c/fields/HorarioMalha__c.field-meta.xml
<CustomField>
    <fullName>HorarioMalha__c</fullName>
    <label>Horário Malha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Programacao</valueSetName>
    </valueSet>
</CustomField>