force-app/main/default/objects/Trecho__c/fields/IdExternoOOSVoo__c.field-meta.xml
<CustomField>
    <fullName>IdExternoOOSVoo__c</fullName>
    <formula>Voo__r.IdExternoOOS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Externo OOS Voo</label>
    <type>Text</type>
</CustomField>