force-app/main/default/objects/Trecho__c/fields/IdExternoSigTrip__c.field-meta.xml
<CustomField>
    <fullName>IdExternoSigTrip__c</fullName>
    <description>Campo utilizado para envio do voo ao SigTrip. Não foi marcado como id externo por que não haverá upsert.</description>
    <externalId>true</externalId>
    <label>Id Externo Sig Trip</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>