force-app/main/default/objects/Trecho__c/fields/InicioPesagem__c.field-meta.xml
<CustomField>
    <fullName>InicioPesagem__c</fullName>
    <label>Primeira Pesagem</label>
    <summarizedField>Passageiro__c.HoraCheckin__c</summarizedField>
    <summaryForeignKey>Passageiro__c.Trecho__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>