force-app/main/default/objects/Trecho__c/fields/InicioPesagemDEL__c.field-meta.xml
<CustomField>
    <fullName>InicioPesagemDEL__c</fullName>
    <label>Pesagem iniciada</label>
    <type>DateTime</type>
</CustomField>