force-app/main/default/objects/Trecho__c/fields/InicioVoo__c.field-meta.xml
<CustomField>
    <fullName>InicioVoo__c</fullName>
    <description>Quando o trecho não possuir a hora de acionamento do motor, usar a hora do início do vôo</description>
    <formula>IF(ISNULL(Ligado__c) , Voo__r.DataVoo__c , Ligado__c)</formula>
    <inlineHelpText>Quando o trecho não possuir a hora de acionamento do motor, usar a hora do início do vôo</inlineHelpText>
    <label>InicioVoo</label>
    <type>DateTime</type>
</CustomField>