force-app/main/default/objects/Trecho__c/fields/Ligado__c.field-meta.xml
<CustomField>
    <fullName>Ligado__c</fullName>
    <description>Horário de ligação do motor</description>
    <inlineHelpText>Horário de ligação do motor</inlineHelpText>
    <label>Acionamento</label>
    <type>DateTime</type>
</CustomField>