force-app/main/default/objects/Trecho__c/fields/LigadoBackup__c.field-meta.xml
<CustomField>
    <fullName>LigadoBackup__c</fullName>
    <description>Campo backup para ser armazenado o valor anterior do Campo Ligado.</description>
    <inlineHelpText>Campo backup para ser armazenado o valor anterior do Campo Ligado.</inlineHelpText>
    <label>Acionamento Original</label>
    <type>DateTime</type>
</CustomField>