force-app/main/default/objects/Trecho__c/fields/LigadoOriginal__c.field-meta.xml
<CustomField>
    <fullName>LigadoOriginal__c</fullName>
    <label>Acionamento original</label>
    <type>DateTime</type>
</CustomField>