force-app/main/default/objects/Trecho__c/fields/LigadoTimeZoneEmpresa__c.field-meta.xml
<CustomField>
    <fullName>LigadoTimeZoneEmpresa__c</fullName>
    <formula>LPAD(TEXT(DAY(DATEVALUE(DATETIMEVALUE(Ligado__c) + Voo__r.Cliente__r.TimeZone__c))), 2, &apos;0&apos;)
+ &quot;/&quot; +LPAD(TEXT(MONTH(DATEVALUE(DATETIMEVALUE(Ligado__c) + Voo__r.Cliente__r.TimeZone__c))), 2, &apos;0&apos;)
+ &quot;/&quot; +TEXT(YEAR(DATEVALUE(DATETIMEVALUE(Ligado__c) + Voo__r.Cliente__r.TimeZone__c)))
+ &quot; &quot; +LPAD(TEXT(HOUR(TIMEVALUE(DATETIMEVALUE(Ligado__c) + Voo__r.Cliente__r.TimeZone__c))), 2, &apos;0&apos;)
+ &quot;:&quot; +LPAD(TEXT(MINUTE(TIMEVALUE(DATETIMEVALUE(Ligado__c)+ Voo__r.Cliente__r.TimeZone__c))), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acionamento no horário local do voo</label>
    <type>Text</type>
</CustomField>