force-app/main/default/objects/Trecho__c/fields/MalhaVoo__c.field-meta.xml
<CustomField>
    <fullName>MalhaVoo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Malha de Voo</label>
    <referenceTo>MalhaVoo__c</referenceTo>
    <relationshipLabel>Trechos</relationshipLabel>
    <relationshipName>Trechos</relationshipName>
    <type>Lookup</type>
</CustomField>