force-app/main/default/objects/Trecho__c/fields/ManifestoOK__c.field-meta.xml
<CustomField>
    <fullName>ManifestoOK__c</fullName>
    <formula>(TEXT(StatusAtendimento__c) == &apos;MTA Liberado&apos;
                                                || TEXT(StatusAtendimento__c)== &apos;Embarque Autorizado&apos;
                                                || TEXT(StatusAtendimento__c)== &apos;Passageiros Prontos&apos;
|| TEXT(StatusAtendimento__c)== &apos;Passageiros Embarcados&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ManifestoOK</label>
    <type>Checkbox</type>
</CustomField>