force-app/main/default/objects/Trecho__c/fields/ModeloAeronave__c.field-meta.xml
<CustomField>
    <fullName>ModeloAeronave__c</fullName>
    <formula>Voo__r.Prefixo__r.ModeloAeronave__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modelo</label>
    <type>Text</type>
</CustomField>