force-app/main/default/objects/Trecho__c/fields/MotivoAtraso__c.field-meta.xml
<CustomField>
    <fullName>MotivoAtraso__c</fullName>
    <description>Campo do Star</description>
    <label>Motivo de Atraso</label>
    <type>TextArea</type>
</CustomField>