force-app/main/default/objects/Trecho__c/fields/NumPaxSIG__c.field-meta.xml
<CustomField>
    <fullName>NumPaxSIG__c</fullName>
    <description>Campo quantidade de passageiros do Objeto SIG Trip.</description>
    <inlineHelpText>Campo quantidade de passageiros do Objeto SIG Trip.</inlineHelpText>
    <label>NumPaxSIG</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>