force-app/main/default/objects/Trecho__c/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <inlineHelpText>Observações sobre o trecho</inlineHelpText>
    <label>Observações</label>
    <length>255</length>
    <type>Text</type>
</CustomField>