force-app/main/default/objects/Trecho__c/fields/Offshore__c.field-meta.xml
<CustomField>
    <fullName>Offshore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informa se um trecho possui uma origem &apos;Offshore&apos;</description>
    <inlineHelpText>Informa se um trecho possui uma origem &apos;Offshore&apos;</inlineHelpText>
    <label>Offshore</label>
    <type>Checkbox</type>
</CustomField>