force-app/main/default/objects/Trecho__c/fields/OrdemExecucao__c.field-meta.xml
<CustomField>
    <fullName>OrdemExecucao__c</fullName>
    <description>Ordem de execução em que o trecho será executado no voo</description>
    <inlineHelpText>Ordem de execução em que o trecho será executado no voo</inlineHelpText>
    <label>Ordem de execução</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>