force-app/main/default/objects/Trecho__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Local de origem do trecho</description>
    <inlineHelpText>Local de origem do trecho</inlineHelpText>
    <label>Origem</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Trechos (Origem)</relationshipLabel>
    <relationshipName>TrechosOrigem</relationshipName>
    <type>Lookup</type>
</CustomField>