force-app/main/default/objects/Trecho__c/fields/OrigemBase__c.field-meta.xml
<CustomField>
    <fullName>OrigemBase__c</fullName>
    <formula>Origem__r.Base__c</formula>
    <label>Origem É Base</label>
    <type>Checkbox</type>
</CustomField>