force-app/main/default/objects/Trecho__c/fields/OrigemTexto__c.field-meta.xml
<CustomField>
    <fullName>OrigemTexto__c</fullName>
    <description>Concatena Código do Local e seu nome</description>
    <formula>Origem__r.CodigoLocal__c &amp; &apos; - &apos; &amp;  Origem__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origem</label>
    <type>Text</type>
</CustomField>