force-app/main/default/objects/Trecho__c/fields/PassageirosDesembarcando__c.field-meta.xml
<CustomField>
    <fullName>PassageirosDesembarcando__c</fullName>
    <label>Nº de Passageiros Desembarcando</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>