force-app/main/default/objects/Trecho__c/fields/PassageirosEmbarcando__c.field-meta.xml
<CustomField>
    <fullName>PassageirosEmbarcando__c</fullName>
    <label>Nº de Passageiros Embarcando</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>