force-app/main/default/objects/Trecho__c/fields/PaxSIGBackup__c.field-meta.xml
<CustomField>
    <fullName>PaxSIGBackup__c</fullName>
    <description>Campo backup da quantidade de passageiros do objeto SIGtrip.</description>
    <inlineHelpText>Campo backup da quantidade de passageiros do objeto SIGtrip.</inlineHelpText>
    <label>PaxSIGBackup</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>