force-app/main/default/objects/Trecho__c/fields/PesoCargasDesembarque__c.field-meta.xml
<CustomField>
    <fullName>PesoCargasDesembarque__c</fullName>
    <label>Peso cargas desembarcando</label>
    <summarizedField>Carga__c.Peso__c</summarizedField>
    <summaryFilterItems>
        <field>Carga__c.CheckIn__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Carga__c.Transferida__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Carga__c.Desembarcando__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Carga__c.Trecho__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>