force-app/main/default/objects/Trecho__c/fields/PesoPassageiros__c.field-meta.xml
<CustomField>
    <fullName>PesoPassageiros__c</fullName>
    <label>Peso dos Passageiros</label>
    <summarizedField>Passageiro__c.Peso__c</summarizedField>
    <summaryFilterItems>
        <field>Passageiro__c.CheckIn__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Passageiro__c.Transferido__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Passageiro__c.Excluido__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Passageiro__c.Trecho__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>