force-app/main/default/objects/Trecho__c/fields/Pouso__c.field-meta.xml
<CustomField>
    <fullName>Pouso__c</fullName>
    <label>Pouso</label>
    <type>DateTime</type>
</CustomField>