force-app/main/default/objects/Trecho__c/fields/PousoAnterior__c.field-meta.xml
<CustomField>
    <fullName>PousoAnterior__c</fullName>
    <formula>TrechoAnterior__r.Pouso__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pouso anterior</label>
    <type>DateTime</type>
</CustomField>