force-app/main/default/objects/Trecho__c/fields/PousoBackup__c.field-meta.xml
<CustomField>
    <fullName>PousoBackup__c</fullName>
    <description>Campo backup para ser armazenado o valor anterior do Campo Pouso.</description>
    <inlineHelpText>Campo backup para ser armazenado o valor anterior do Campo Pouso.</inlineHelpText>
    <label>Pouso Original</label>
    <type>DateTime</type>
</CustomField>