force-app/main/default/objects/Trecho__c/fields/PousoDif__c.field-meta.xml
<CustomField>
    <fullName>PousoDif__c</fullName>
    <description>Exibe os tempos de pouso do voe omni e sig caso sejam diferentes</description>
    <formula>IF(AND(ISNULL(Pouso__c), ISNULL(PousoSig__c)), &apos;&apos;,
IF(OR(Pouso__c != PousoSig__c, ISNULL(Pouso__c), ISNULL(PousoSig__c)), 
			IF(ISNULL(Pouso__c), &apos;-&apos;,
			&apos;OMNI: &apos; &amp; RIGHT(LEFT(TEXT(Pouso__c),16),5))
			&amp; &apos; / &apos; &amp; 
			IF(ISNULL(PousoSig__c), &apos;-&apos;,
			&apos;Sig: &apos; &amp; RIGHT(LEFT(TEXT(PousoSig__c),16),5)), &apos;&apos;))</formula>
    <inlineHelpText>Exibe os tempos de pouso do voe omni e sig caso sejam diferentes</inlineHelpText>
    <label>Pouso Dif</label>
    <type>Text</type>
</CustomField>