force-app/main/default/objects/Trecho__c/fields/PousoOriginal__c.field-meta.xml
<CustomField>
    <fullName>PousoOriginal__c</fullName>
    <label>Pouso original</label>
    <type>DateTime</type>
</CustomField>