force-app/main/default/objects/Trecho__c/fields/PousoSig__c.field-meta.xml
<CustomField>
    <fullName>PousoSig__c</fullName>
    <description>Campo Sig do momento do pouso do voo.</description>
    <inlineHelpText>Campo Sig do momento do pouso do voo.</inlineHelpText>
    <label>Pouso Sig</label>
    <type>DateTime</type>
</CustomField>