force-app/main/default/objects/Trecho__c/fields/PousoTrechoAnterior__c.field-meta.xml
<CustomField>
    <fullName>PousoTrechoAnterior__c</fullName>
    <label>Pouso do trecho anterior</label>
    <type>DateTime</type>
</CustomField>