force-app/main/default/objects/Trecho__c/fields/PrefixoAeronave__c.field-meta.xml
<CustomField>
    <fullName>PrefixoAeronave__c</fullName>
    <description>Espelha o Prefixo da Aeronave utilizada no Voo</description>
    <formula>Voo__r.Prefixo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Prefixo utilizado no Voo</inlineHelpText>
    <label>Prefixo da Aeronave</label>
    <type>Text</type>
</CustomField>