force-app/main/default/objects/Trecho__c/fields/PrevisaoDecolagem__c.field-meta.xml
<CustomField>
    <fullName>PrevisaoDecolagem__c</fullName>
    <label>Previsão de Decolagem do Voo</label>
    <type>DateTime</type>
</CustomField>