force-app/main/default/objects/Trecho__c/fields/PrevisaoDecolagemFormula__c.field-meta.xml
<CustomField>
    <fullName>PrevisaoDecolagemFormula__c</fullName>
    <description>Quando a decolagem do trecho for preenchido, irá gerar a &apos;Previsão de pouso (fórmula)&apos; para preencher no template de e-mail (takeoff report) o horário do pouso</description>
    <formula>Decolagem__c+ (TempoMissao__c/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quando a decolagem do trecho for preenchido, irá gerar a &apos;Previsão de pouso (fórmula)&apos; para preencher no template de e-mail (takeoff report) o horário do pouso</inlineHelpText>
    <label>Previsão de decolagem (fórmula)</label>
    <type>DateTime</type>
</CustomField>