force-app/main/default/objects/Trecho__c/fields/PrevisaoPouso__c.field-meta.xml
<CustomField>
    <fullName>PrevisaoPouso__c</fullName>
    <label>Previsão de Pouso do Voo</label>
    <type>DateTime</type>
</CustomField>