force-app/main/default/objects/Trecho__c/fields/PrevisaoPousoTimezoneEmpresa__c.field-meta.xml
<CustomField>
    <fullName>PrevisaoPousoTimezoneEmpresa__c</fullName>
    <formula>LPAD(TEXT(DAY(DATEVALUE(DATETIMEVALUE(Decolagem__c+ (TempoMissao__c/1440)) + Voo__r.Cliente__r.TimeZone__c))), 2, &apos;0&apos;)
+ &quot;/&quot; +LPAD(TEXT(MONTH(DATEVALUE(DATETIMEVALUE(Decolagem__c+ (TempoMissao__c/1440)) + Voo__r.Cliente__r.TimeZone__c))), 2, &apos;0&apos;)
+ &quot;/&quot; +TEXT(YEAR(DATEVALUE(DATETIMEVALUE(Decolagem__c+ (TempoMissao__c/1440)) + Voo__r.Cliente__r.TimeZone__c)))
+ &quot; &quot; +LPAD(TEXT(HOUR(TIMEVALUE(DATETIMEVALUE(Decolagem__c+ (TempoMissao__c/1440)) + Voo__r.Cliente__r.TimeZone__c))), 2, &apos;0&apos;)
+ &quot;:&quot; +LPAD(TEXT(MINUTE(TIMEVALUE(DATETIMEVALUE(Decolagem__c+ (TempoMissao__c/1440)) + Voo__r.Cliente__r.TimeZone__c))), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previsão de pouso no local do voo</label>
    <type>Text</type>
</CustomField>