force-app/main/default/objects/Trecho__c/fields/PrimeiroTrecho__c.field-meta.xml
<CustomField>
    <fullName>PrimeiroTrecho__c</fullName>
    <description>Marca de o trecho é o primeiro a ser executado descartando translados</description>
    <formula>OrdemExecucao__c  =  Voo__r.PrimeiroTrecho__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Marca de o trecho é o primeiro a ser executado descartando translados</inlineHelpText>
    <label>Primeiro Trecho</label>
    <type>Checkbox</type>
</CustomField>