force-app/main/default/objects/Trecho__c/fields/PrimeiroTrechoFixo__c.field-meta.xml
<CustomField>
    <fullName>PrimeiroTrechoFixo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primeiro Trecho Fixo</label>
    <type>Checkbox</type>
</CustomField>