force-app/main/default/objects/Trecho__c/fields/processandoSIG__c.field-meta.xml
<CustomField>
    <fullName>processandoSIG__c</fullName>
    <formula>Voo__r.processandoSIG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>processandoSIG</label>
    <type>Checkbox</type>
</CustomField>