force-app/main/default/objects/Trecho__c/fields/ProdutoShuttleSeat__c.field-meta.xml
<CustomField>
    <fullName>ProdutoShuttleSeat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto Shuttle Seat</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Trechos</relationshipLabel>
    <relationshipName>Trechos</relationshipName>
    <type>Lookup</type>
</CustomField>