force-app/main/default/objects/Trecho__c/fields/QtdCargasDesembarcando__c.field-meta.xml
<CustomField>
    <fullName>QtdCargasDesembarcando__c</fullName>
    <label>Qtd Cargas desembarcando</label>
    <summaryFilterItems>
        <field>Carga__c.CheckIn__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Carga__c.Transferida__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Carga__c.Desembarcando__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Carga__c.Trecho__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>