force-app/main/default/objects/Trecho__c/fields/QtdCargaSemClassificacao__c.field-meta.xml
<CustomField>
    <fullName>QtdCargaSemClassificacao__c</fullName>
    <label>Qtd Carga Sem classificacao</label>
    <summaryFilterItems>
        <field>Carga__c.Excluida__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Carga__c.NoShow__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Carga__c.Transferida__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Carga__c.NoShow__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Carga__c.CheckIn__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Carga__c.Trecho__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>