force-app/main/default/objects/Trecho__c/fields/QtdCheckIn__c.field-meta.xml
<CustomField>
    <fullName>QtdCheckIn__c</fullName>
    <label>CheckIn(s)</label>
    <summaryFilterItems>
        <field>Passageiro__c.CheckIn__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Passageiro__c.Transferido__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Passageiro__c.Excluido__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Passageiro__c.NoShow__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Passageiro__c.Trecho__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>