force-app/main/default/objects/Trecho__c/fields/QtdNoShow__c.field-meta.xml
<CustomField>
    <fullName>QtdNoShow__c</fullName>
    <label>No Show (s)</label>
    <summaryFilterItems>
        <field>Passageiro__c.NoShow__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Passageiro__c.Trecho__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>