force-app/main/default/objects/Trecho__c/fields/QtdPassageirosDesembarcando__c.field-meta.xml
<CustomField>
    <fullName>QtdPassageirosDesembarcando__c</fullName>
    <label>Qtd Passageiros desembarcando</label>
    <summaryFilterItems>
        <field>Passageiro__c.CheckIn__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Passageiro__c.Transferido__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Passageiro__c.Desembarcando__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Passageiro__c.Trecho__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>