force-app/main/default/objects/Trecho__c/fields/QtdPassageirosTransferidos__c.field-meta.xml
<CustomField>
    <fullName>QtdPassageirosTransferidos__c</fullName>
    <label>Passageiros Transferidos</label>
    <summaryFilterItems>
        <field>Passageiro__c.Transferido__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Passageiro__c.Trecho__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>