force-app/main/default/objects/Trecho__c/fields/QtdRetirado__c.field-meta.xml
<CustomField>
    <fullName>QtdRetirado__c</fullName>
    <label>Qtd Retirado</label>
    <summaryFilterItems>
        <field>Passageiro__c.Excluido__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Passageiro__c.Trecho__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>