force-app/main/default/objects/Trecho__c/fields/QtdVolumes__c.field-meta.xml
<CustomField>
    <fullName>QtdVolumes__c</fullName>
    <label>Volumes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>