force-app/main/default/objects/Trecho__c/fields/QuantidadeCargas__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeCargas__c</fullName>
    <description>Resumo do total de cargas inclusas no trecho</description>
    <label>Quantidade de Cargas</label>
    <summaryForeignKey>Carga__c.Trecho__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>