force-app/main/default/objects/Trecho__c/fields/QuantidadePassageiros__c.field-meta.xml
<CustomField>
    <fullName>QuantidadePassageiros__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total de passageiros que fez checkin</description>
    <inlineHelpText>Total de passageiros que fez checkin</inlineHelpText>
    <label>Qtd Passageiros (excluir)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>