force-app/main/default/objects/Trecho__c/fields/RelatarioVooAprovado__c.field-meta.xml
<CustomField>
    <fullName>RelatarioVooAprovado__c</fullName>
    <formula>!ISBLANK(Voo__r.RelatorioVooAnexo__c) &amp;&amp; !ISNULL(Voo__r.RelatorioVooAnexo__c) &amp;&amp;
!ISBLANK(Voo__r.RelatorioVoo__c) &amp;&amp; !ISNULL(Voo__r.RelatorioVoo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relatório de voo - Aprovado</label>
    <type>Checkbox</type>
</CustomField>