force-app/main/default/objects/Trecho__c/fields/RelatorioVoo__c.field-meta.xml
<CustomField>
    <fullName>RelatorioVoo__c</fullName>
    <formula>Voo__r.RelatorioVoo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relatório de voo&apos;</label>
    <type>Text</type>
</CustomField>