force-app/main/default/objects/Trecho__c/fields/Rota__c.field-meta.xml
<CustomField>
    <fullName>Rota__c</fullName>
    <formula>Origem__r.CodigoLocal__c &amp; &apos; - &apos; &amp; Origem__r.Name &amp; &apos; &gt; &apos; &amp; Destino__r.CodigoLocal__c &amp; &apos; - &apos; &amp; Destino__r.Name</formula>
    <label>Rota</label>
    <type>Text</type>
</CustomField>