force-app/main/default/objects/Trecho__c/fields/RotaTrecho__c.field-meta.xml
<CustomField>
    <fullName>RotaTrecho__c</fullName>
    <description>Rota do Trecho</description>
    <formula>Origem__r.Name &amp; &apos; &gt; &apos; &amp;  Destino__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rota do Trecho</label>
    <type>Text</type>
</CustomField>