force-app/main/default/objects/Trecho__c/fields/RotaTrechoAbreviada__c.field-meta.xml
<CustomField>
    <fullName>RotaTrechoAbreviada__c</fullName>
    <formula>Origem__r.CodigoLocal__c +&apos; &gt; &apos;+ Destino__r.CodigoLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RotaTrechoAbreviada</label>
    <type>Text</type>
</CustomField>