force-app/main/default/objects/Trecho__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Iniciado</fullName>
                <default>true</default>
                <label>Não Iniciado</label>
            </value>
            <value>
                <fullName>Check In Fechado</fullName>
            </value>
            <value>
                <fullName>Em Rota</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>